--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-patreon: DavidDahlstrom # Replace with a single Patreon username
+patreon: DavidDahlstrom # Patreon username
 custom: ["http://paypal.me/DGDahlstrom"] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
